skype logをtopic毎にuploadするように対応

--- a/AutoMemorizeDesktop/FileTaskView.xib
+++ b/AutoMemorizeDesktop/FileTaskView.xib
@@ -345,6 +345,14 @@
 					</object>
 					<int key="connectionID">117</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">changeVisibleOthterDirectoryPath:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="737579089"/>
+					</object>
+					<int key="connectionID">137</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -953,13 +961,24 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">136</int>
+			<int key="maxID">137</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">FileTaskView</string>
 					<string key="superclassName">NSViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">changeVisibleOthterDirectoryPath:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">changeVisibleOthterDirectoryPath:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">changeVisibleOthterDirectoryPath:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="directoryError">NSTextField</string>
 						<string key="directoryField">NSComboBox</string>
