--- a/AutoMemorizeDesktop/AdditionalConditionView.xib
+++ b/AutoMemorizeDesktop/AdditionalConditionView.xib
@@ -47,7 +47,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{10, 327}, {442, 43}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="556694622"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
@@ -88,7 +87,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{24, 119}, {445, 42}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="263357953"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
@@ -105,12 +103,9 @@ c3BlY2lmaXksIHRoZSBOb3RlIHdpbGwgYmUgY3JlYXRlZCBpbiB0aGUgZGVmYXVsdCBOb3RlYm9vay4<
 							<string key="NSCellIdentifier">_NS:1535</string>
 							<reference key="NSControlView" ref="213982649"/>
 							<reference key="NSBackgroundColor" ref="541507081"/>
-							<object class="NSColor" key="NSTextColor">
+							<object class="NSColor" key="NSTextColor" id="446490508">
 								<int key="NSColorSpace">3</int>
-								<bytes key="NSWhite">MC43NQA</bytes>
-								<object class="NSColorSpace" key="NSCustomColorSpace" id="78560320">
-									<int key="NSID">2</int>
-								</object>
+								<bytes key="NSWhite">MC41AA</bytes>
 							</object>
 						</object>
 						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -120,7 +115,6 @@ c3BlY2lmaXksIHRoZSBOb3RlIHdpbGwgYmUgY3JlYXRlZCBpbiB0aGUgZGVmYXVsdCBOb3RlYm9vay4<
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{24, 227}, {427, 34}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="93780423"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="NSAntiCompressionPriority">{250, 750}</string>
@@ -138,11 +132,7 @@ b3RlIFRpdGxlIHdpbGwgYmUgZGF0YSB0eXBlIG9yIGZpbGUgbmFtZS4</string>
 							<string key="NSCellIdentifier">_NS:9</string>
 							<reference key="NSControlView" ref="631490645"/>
 							<reference key="NSBackgroundColor" ref="541507081"/>
-							<object class="NSColor" key="NSTextColor">
-								<int key="NSColorSpace">3</int>
-								<bytes key="NSWhite">MC43NQA</bytes>
-								<reference key="NSCustomColorSpace" ref="78560320"/>
-							</object>
+							<reference key="NSTextColor" ref="446490508"/>
 						</object>
 						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 						<bool key="NSControlAutosetMaxLayoutWidth">YES</bool>
@@ -155,8 +145,6 @@ b3RlIFRpdGxlIHdpbGwgYmUgZGF0YSB0eXBlIG9yIGZpbGUgbmFtZS4</string>
 						</set>
 						<string key="NSFrame">{{15, 65}, {461, 35}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTokenFieldCell" key="NSCell" id="786359966">
@@ -193,7 +181,6 @@ b3RlIFRpdGxlIHdpbGwgYmUgZGF0YSB0eXBlIG9yIGZpbGUgbmFtZS4</string>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{15, 169}, {469, 36}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="213982649"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
@@ -268,10 +255,7 @@ b3RlIFRpdGxlIHdpbGwgYmUgZGF0YSB0eXBlIG9yIGZpbGUgbmFtZS4</string>
 									<int key="NSColorSpace">6</int>
 									<string key="NSCatalogName">System</string>
 									<string key="NSColorName">gridColor</string>
-									<object class="NSColor" key="NSColor">
-										<int key="NSColorSpace">3</int>
-										<bytes key="NSWhite">MC41AA</bytes>
-									</object>
+									<reference key="NSColor" ref="446490508"/>
 								</object>
 								<double key="NSRowHeight">21</double>
 								<string key="NSAction">tableViewAction:</string>
@@ -295,7 +279,6 @@ b3RlIFRpdGxlIHdpbGwgYmUgZGF0YSB0eXBlIG9yIGZpbGUgbmFtZS4</string>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{15, 265}, {463, 35}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="631490645"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
@@ -321,7 +304,6 @@ b3RlIFRpdGxlIHdpbGwgYmUgZGF0YSB0eXBlIG9yIGZpbGUgbmFtZS4</string>
 				</array>
 				<string key="NSFrameSize">{500, 400}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="442951765"/>
 				<string key="NSClassName">NSView</string>
 			</object>
@@ -1033,45 +1015,7 @@ b3RlIFRpdGxlIHdpbGwgYmUgZGF0YSB0eXBlIG9yIGZpbGUgbmFtZS4</string>
 			<nil key="sourceID"/>
 			<int key="maxID">275</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">AdditionalConditionView</string>
-					<string key="superclassName">NSViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="notebookField">NSComboBox</string>
-						<string key="notetitleField">NSTextField</string>
-						<string key="tagField">NSTokenField</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="notebookField">
-							<string key="name">notebookField</string>
-							<string key="candidateClassName">NSComboBox</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="notetitleField">
-							<string key="name">notetitleField</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tagField">
-							<string key="name">tagField</string>
-							<string key="candidateClassName">NSTokenField</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AdditionalConditionView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
