--- a/AutoMemorizeDesktop/ChooseBackupDirectoryView.xib
+++ b/AutoMemorizeDesktop/ChooseBackupDirectoryView.xib
@@ -45,7 +45,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{452, 264}, {40, 40}}</string>
 						<reference key="NSSuperview" ref="282421684"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="695690793"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
@@ -72,9 +71,8 @@
 					<object class="NSTextField" id="695690793">
 						<reference key="NSNextResponder" ref="282421684"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{21, 225}, {427, 34}}</string>
+						<string key="NSFrame">{{21, 225}, {444, 34}}</string>
 						<reference key="NSSuperview" ref="282421684"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="260697203"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="NSAntiCompressionPriority">{250, 750}</string>
@@ -82,7 +80,7 @@
 						<object class="NSTextFieldCell" key="NSCell" id="214905009">
 							<int key="NSCellFlags">67108864</int>
 							<int key="NSCellFlags2">272629760</int>
-							<string key="NSContents">Uploaded File will be moved to the backup directory automatically.</string>
+							<string key="NSContents">* Uploaded File will be moved to the backup directory automatically.</string>
 							<object class="NSFont" key="NSSupport" id="82662644">
 								<string key="NSName">LucidaGrande</string>
 								<double key="NSSize">13</double>
@@ -100,23 +98,8 @@
 								</object>
 							</object>
 							<object class="NSColor" key="NSTextColor">
-								<int key="NSColorSpace">1</int>
-								<bytes key="NSRGB">MC4yNTU0MTc4MjM4IDAuMjU1NDQ4MDEzNSAwLjI1NTM5Mjc2AA</bytes>
-								<object class="NSColorSpace" key="NSCustomColorSpace">
-									<object class="NSMutableData" key="NSICC">
-										<bytes key="NS.bytes">AAACKEFEQkUCEAAAbW50clJHQiBYWVogB9AACAALABMANAAYYWNzcEFQUEwAAAAAbm9uZQAAAAAAAAAA
-AAAAAAAAAAAAAPbWAAEAAAAA0y1BREJFLlTRCzksrEciZGm6Lqlb2AAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAKY3BydAAAAPwAAAAyZGVzYwAAATAAAABkd3RwdAAAAZQAAAAUYmtwdAAAAagAAAAU
-clRSQwAAAbwAAAAOZ1RSQwAAAcwAAAAOYlRSQwAAAdwAAAAOclhZWgAAAewAAAAUZ1hZWgAAAgAAAAAU
-YlhZWgAAAhQAAAAUdGV4dAAAAABDb3B5cmlnaHQgMjAwMCBBZG9iZSBTeXN0ZW1zIEluY29ycG9yYXRl
-ZAAAAGRlc2MAAAAAAAAACkFwcGxlIFJHQgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABYWVogAAAAAAAA81EAAQAA
-AAEWzFhZWiAAAAAAAAAAAAAAAAAAAAAAY3VydgAAAAAAAAABAc0AAGN1cnYAAAAAAAAAAQHNAABjdXJ2
-AAAAAAAAAAEBzQAAWFlaIAAAAAAAAHm9AABBUgAABLlYWVogAAAAAAAAVvgAAKwvAAAdA1hZWiAAAAAA
-AAAmIgAAEn8AALFwA</bytes>
-									</object>
-								</object>
-								<characters key="NSComponents">0.255436033 0.255436033 0.255436033 1</characters>
+								<int key="NSColorSpace">3</int>
+								<bytes key="NSWhite">MC41AA</bytes>
 							</object>
 						</object>
 						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -127,7 +110,7 @@ AAAmIgAAEn8AALFwA</bytes>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{22, 202}, {427, 34}}</string>
 						<reference key="NSSuperview" ref="282421684"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="NSAntiCompressionPriority">{250, 750}</string>
 						<bool key="NSEnabled">YES</bool>
@@ -152,7 +135,6 @@ AAAmIgAAEn8AALFwA</bytes>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{20, 267}, {425, 35}}</string>
 						<reference key="NSSuperview" ref="282421684"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="189322323"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
@@ -195,7 +177,6 @@ AAAmIgAAEn8AALFwA</bytes>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{10, 327}, {440, 43}}</string>
 						<reference key="NSSuperview" ref="282421684"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="534927652"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
@@ -223,7 +204,6 @@ AAAmIgAAEn8AALFwA</bytes>
 				</array>
 				<string key="NSFrameSize">{500, 400}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="442156006"/>
 				<string key="NSClassName">NSView</string>
 			</object>
@@ -319,22 +299,6 @@ AAAmIgAAEn8AALFwA</bytes>
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="133445854">
-								<reference key="firstItem" ref="189322323"/>
-								<int key="firstAttribute">4</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="534927652"/>
-								<int key="secondAttribute">4</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">0.0</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="282421684"/>
-								<int key="scoringType">6</int>
-								<float key="scoringTypeFloat">24</float>
-								<int key="contentType">2</int>
-							</object>
 							<object class="IBNSLayoutConstraint" id="582348366">
 								<reference key="firstItem" ref="282421684"/>
 								<int key="firstAttribute">6</int>
@@ -383,6 +347,38 @@ AAAmIgAAEn8AALFwA</bytes>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
+							<object class="IBNSLayoutConstraint" id="721148880">
+								<reference key="firstItem" ref="695690793"/>
+								<int key="firstAttribute">3</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="189322323"/>
+								<int key="secondAttribute">4</int>
+								<float key="multiplier">1</float>
+								<object class="IBNSLayoutSymbolicConstant" key="constant">
+									<double key="value">8</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="282421684"/>
+								<int key="scoringType">6</int>
+								<float key="scoringTypeFloat">24</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="82324080">
+								<reference key="firstItem" ref="695690793"/>
+								<int key="firstAttribute">5</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="282421684"/>
+								<int key="secondAttribute">5</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">24</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="282421684"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">3</int>
+							</object>
 							<object class="IBNSLayoutConstraint" id="1068897881">
 								<reference key="firstItem" ref="695690793"/>
 								<int key="firstAttribute">3</int>
@@ -414,22 +410,6 @@ AAAmIgAAEn8AALFwA</bytes>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="836127195">
-								<reference key="firstItem" ref="534927652"/>
-								<int key="firstAttribute">6</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="695690793"/>
-								<int key="secondAttribute">6</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">0.0</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="282421684"/>
-								<int key="scoringType">6</int>
-								<float key="scoringTypeFloat">24</float>
-								<int key="contentType">2</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="922113384">
 								<reference key="firstItem" ref="534927652"/>
@@ -660,7 +640,7 @@ AAAmIgAAEn8AALFwA</bytes>
 						<reference key="object" ref="695690793"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="214905009"/>
-							<object class="IBNSLayoutConstraint" id="582170067">
+							<object class="IBNSLayoutConstraint" id="235890312">
 								<reference key="firstItem" ref="695690793"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
@@ -668,7 +648,7 @@ AAAmIgAAEn8AALFwA</bytes>
 								<int key="secondAttribute">0</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">421</double>
+									<double key="value">438</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="695690793"/>
@@ -706,11 +686,6 @@ AAAmIgAAEn8AALFwA</bytes>
 						<reference key="parent" ref="695690793"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">48</int>
-						<reference key="object" ref="582170067"/>
-						<reference key="parent" ref="695690793"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">102</int>
 						<reference key="object" ref="922113384"/>
 						<reference key="parent" ref="282421684"/>
@@ -723,11 +698,6 @@ AAAmIgAAEn8AALFwA</bytes>
 					<object class="IBObjectRecord">
 						<int key="objectID">122</int>
 						<reference key="object" ref="90982986"/>
-						<reference key="parent" ref="282421684"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">129</int>
-						<reference key="object" ref="836127195"/>
 						<reference key="parent" ref="282421684"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -785,14 +755,24 @@ AAAmIgAAEn8AALFwA</bytes>
 						<reference key="parent" ref="189322323"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">150</int>
-						<reference key="object" ref="133445854"/>
-						<reference key="parent" ref="282421684"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">151</int>
 						<reference key="object" ref="843044570"/>
 						<reference key="parent" ref="282421684"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">152</int>
+						<reference key="object" ref="82324080"/>
+						<reference key="parent" ref="282421684"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">153</int>
+						<reference key="object" ref="721148880"/>
+						<reference key="parent" ref="282421684"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">154</int>
+						<reference key="object" ref="235890312"/>
+						<reference key="parent" ref="695690793"/>
 					</object>
 				</array>
 			</object>
@@ -804,7 +784,6 @@ AAAmIgAAEn8AALFwA</bytes>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="121.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="122.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="129.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="130.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<array class="NSMutableArray" key="131.IBNSViewMetadataConstraints">
 					<reference ref="690844851"/>
@@ -822,8 +801,10 @@ AAAmIgAAEn8AALFwA</bytes>
 				</array>
 				<boolean value="NO" key="15.IBNSViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="150.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="151.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="152.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="153.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="154.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -836,19 +817,19 @@ AAAmIgAAEn8AALFwA</bytes>
 					<reference ref="619147352"/>
 					<reference ref="90982986"/>
 					<reference ref="922113384"/>
-					<reference ref="836127195"/>
 					<reference ref="1017867353"/>
 					<reference ref="1068897881"/>
+					<reference ref="82324080"/>
+					<reference ref="721148880"/>
 					<reference ref="312831174"/>
 					<reference ref="29663598"/>
 					<reference ref="582348366"/>
-					<reference ref="133445854"/>
 					<reference ref="843044570"/>
 				</array>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<array key="39.IBNSViewMetadataConstraints">
+				<array class="NSMutableArray" key="39.IBNSViewMetadataConstraints">
 					<reference ref="44844685"/>
-					<reference ref="582170067"/>
+					<reference ref="235890312"/>
 				</array>
 				<boolean value="NO" key="39.IBNSViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="39.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -860,7 +841,6 @@ AAAmIgAAEn8AALFwA</bytes>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="40.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="42.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="48.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<array class="NSMutableArray" key="5.IBNSViewMetadataConstraints">
 					<reference ref="221233931"/>
 					<reference ref="735446669"/>
@@ -873,58 +853,9 @@ AAAmIgAAEn8AALFwA</bytes>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">151</int>
+			<int key="maxID">154</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">ChooseBackupDirectoryView</string>
-					<string key="superclassName">NSViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">setChoosedFilePath:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">setChoosedFilePath:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">setChoosedFilePath:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="backupDirectoryField">NSTextField</string>
-						<string key="directoryError">NSTextField</string>
-						<string key="fileChooseBtn">NSButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="backupDirectoryField">
-							<string key="name">backupDirectoryField</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="directoryError">
-							<string key="name">directoryError</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="fileChooseBtn">
-							<string key="name">fileChooseBtn</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ChooseBackupDirectoryView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
